# MSM_App

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Home_Page.html  LICENSE  MSM_Awakening_Tracker_SRS_v1.1.md  MSM_Awakening_Tracker_TDD_v1_3.md  MSM_Awakening_Tracker_Vision.md  Monster_Catalog.html  README.md  RELEASE_CHECKLIST.md  Settings.html  UI_Evaluation_Feedback.md  UI_Evaluation_Feedback_Round2.md  celestial_egg_requirements.py  main.py  msm_tracker.spec  pyproject.toml  requirements.txt
.cursor/plans/: a._what_was_ambiguous_in_the_prior_plan_5a0899f5.plan.md  content_update_pipeline_2f378334.plan.md  home_ui_foundation_568dbe59.plan.md  msm_do_now_plan_6e76f73d.plan.md  msm_next_roadmap_9338c9a5.plan.md  msm_tracker_bootstrap_0c4d38b8.plan.md
.github/workflows/: ci.yml  publish-content.yml  release.yml
app/: bootstrap.py
app/assets/: resolver.py
app/commands/: add_target.py  base.py  close_out_target.py  (+1 more)
content/: content.db  diff-report.json  manifest.json  validation-report.json
docs/: MSM_Awakening_Tracker_SRS_v1.1.md  Zack_Meacham_Contribution_Report.md  improvement-plan-2026-05-04.md
installer/: msm_tracker.iss
pipeline/: SOURCE_POLICY.md  __init__.py  export_baseline.py  version.py
scripts/: audit_egg_elements.py  build.py  capture_ui_screenshots.py  generate_assets.py  generate_icon.py  import_content.py  import_fankit_images.py  inject_version.py  publish_content.py  review_content.py  screenshot_one_card.py  screenshot_panels.py  seed_content_db.py  verify_bundle.py
tests/: conftest.py
(+110 files in other folders)
